# quant-agent

./: .env.example  .gitignore  README.md  pyproject.toml
mcp_server/: __init__.py  auto_register.py  registered_tools.py  server.py
mcp_server/executors/: __init__.py  technical_tools.py  time_series_tools.py
src/screening/: __init__.py  executor.py  expression_evaluator.py  namespace_builder.py
